--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.paynemiller</groupId>
     <artifactId>Jira2GitLab</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <retrofit.version>2.4.0</retrofit.version>
+        <gson.version>2.8.4</gson.version>
+        <apache.commons.verson>3.7</apache.commons.verson>
+        <retrofit.convertor.version>2.4.0</retrofit.convertor.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -25,28 +33,28 @@
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
-            <version>2.4.0</version>
+            <version>${retrofit.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.4</version>
+            <version>${gson.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.7</version>
+            <version>${apache.commons.verson}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-scalars -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-scalars</artifactId>
-            <version>2.4.0</version>
+            <version>${retrofit.convertor.version}</version>
         </dependency>
 
     </dependencies>
